[package]
name = "profile"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
toml = "0.8.14"
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
itertools = "0.13.0"
regex = "1.10.5"
serde_with = "3.8.2"
url = "2.5.2"
git2 = "0.20.1"
serde_regex = "1.1.0"
console = "0.15.8"
tracing = "0.1.40"
log = "0.4.22"
clap_complete = "4.5.7"
